--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,9 @@
         <item
             android:id="@+id/nav_hapus"
             android:title="Hapus Produk" />
+        <item
+            android:id="@+id/nav_login"
+            android:title="Login" />
     </group>
 
 </menu>
