--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,16 +16,8 @@
         android:background="#fff"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/text_login"
-            android:textSize="24sp"
-            android:gravity="center"
-            android:textColor="#56E45B"
-            android:padding="10dp"/>
-
         <EditText
+            android:id="@+id/edit_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="username"
@@ -33,6 +25,7 @@
             android:padding="15dp"/>
 
         <EditText
+            android:id="@+id/edit_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="password"
@@ -42,6 +35,7 @@
             android:inputType="textPassword"/>
 
         <Button
+            android:id="@+id/btn_login"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:background="#56E45B"
